--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,30 +1,27 @@
-name: CI Pipeline
-
+name: build-and-test
 
 on:
   push:
-    branches: [ "main" ]
   pull_request:
-    branches: [ "main" ]
 
 jobs:
-  build-and-test:
+  build:
     runs-on: ubuntu-latest
 
     steps:
-    - name: 📥 Checkout do código
+    - name: Checkout do código
       uses: actions/checkout@v4
 
-    - name: 🏗️ Instalar SDK do .NET
+    - name: Instalar SDK do .NET
       uses: actions/setup-dotnet@v4
       with:
-        dotnet-version: '8.0.x'  # ajuste conforme a versão do seu projeto
+        dotnet-version: '8.0.x'
 
-    - name: 📦 Restaurar dependências
+    - name: Restaurar dependências
       run: dotnet restore Crud_FIAP_Debora_Krikowski.sln
 
-    - name: 🛠️ Buildar o projeto
-      run: dotnet build Crud_FIAP_Debora_Krikowski.sln --no-restore --configuration Release
+    - name: Buildar o projeto
+      run: dotnet build Crud_FIAP_Debora_Krikowski.sln --no-restore
 
-    - name: ✅ Executar testes
-      run: dotnet test Crud_FIAP_Tests/Crud_FIAP_Tests.csproj --no-build --configuration Release --logger "trx;LogFileName=test_results.trx"
+    - name: Executar testes
+      run: dotnet test Crud_FIAP_Debora_Krikowski.sln --no-build --verbosity normal
