--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,13 +17,20 @@ jobs:
       with:
         dotnet-version: '8.0.x'
 
+    - name: Listar arquivos na pasta do projeto
+      run: ls -la Crud_FIAP_Debora_Krikowski
+
     - name: Restaurar dependências
       run: dotnet restore Crud_FIAP_Debora_Krikowski/Crud_FIAP_Debora_Krikowski.sln
 
-    - name: Buildar o projeto
-      run: dotnet build Crud_FIAP_Debora_Krikowski/Crud_FIAP_Debora_Krikowski.sln --no-restore --verbosity detailed
+    - name: Buildar o projeto e salvar log
+      run: dotnet build Crud_FIAP_Debora_Krikowski/Crud_FIAP_Debora_Krikowski.sln --no-restore --verbosity detailed 2>&1 | tee build.log
 
+    - name: Publicar log do build
+      uses: actions/upload-artifact@v3
+      with:
+        name: build-log
+        path: build.log
 
     - name: Executar testes
       run: dotnet test Crud_FIAP_Debora_Krikowski/Crud_FIAP_Debora_Krikowski.sln --no-build --verbosity normal
-
