--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,7 +26,11 @@ jobs:
     - name: Buildar o projeto e salvar log
       run: dotnet build Crud_FIAP_Debora_Krikowski/Crud_FIAP_Debora_Krikowski.sln --no-restore --verbosity detailed 2>&1 | tee build.log
 
-    - name: Executar testes
-      run: dotnet test Crud_FIAP_Tests/Crud_FIAP_Tests.csproj --verbosity detailed --logger "console;verbosity=detailed"
+    - name: Executar testes unitários
+      run: dotnet test Crud_FIAP_Tests/Crud_FIAP_Tests.csproj --filter "Category=Unit" --verbosity detailed --logger "console;verbosity=detailed"
+
+    - name: Executar testes de integração
+      run: dotnet test Crud_FIAP_Tests/Crud_FIAP_Tests.csproj --filter "Category=Integration" --verbosity detailed --logger "console;verbosity=detailed"
+
 
 
